# spy_game_newest

./: .breakpoints  actions.py  files.md  main.py  old_move_spaghtti.py  pyproject.toml  utils.py
data/: entities.json  intro.txt  items.json  move_comands.json  npcs.json  places.json  plot_moves.json  use_items.json
data/json/: craft_items.json  npcs.json  places.json
data/moves/: execs.json  moves.json
data/strings/: commands.txt  map.txt
