[tool.poetry]
name = "spygamenewest"
version = "0.1.0"
description = ""
authors = ["IAMBELLBOY <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
print = "^1.3.0"
gTTS = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
